# emu

./: :w  ASM_INSTRUCTIONS_REFERENCE.md  ASM_LANGUAGE_GUIDE.md  Cargo.toml  README.md  outline.txt  start.zsh
asm/: data.asm  fact.asm  graphics.asm  import_test.asm  macro.asm  movement.asm  simple.asm  snake.asm  startGraphics.asm  test.asm  user_import.asm
asm/std/: 16bit_arithmetic.asm  always.asm  arithmetic16.asm  debug.asm  functions.asm  interupts.asm  jumps.asm  logical_operators.asm  multiply.asm  multiply16.asm  random.asm  remainder.asm  stack.asm  test.asm  testing.asm
asm/tests/: arithmetic_test.asm  data_test.asm  define_test.asm  expression_test.asm  macro_test.asm  stack_test.asm
asm/text/: alphabet.asm
assembler/: Cargo.toml
assembler/src/: assembler.rs  lib.rs  main.rs
common/src/: instruction.rs  levenshtein_distance.rs  lib.rs
disassembly/: Cargo.toml
disassembly/src/: disassemble.rs  disassemble_file.rs  lib.rs  main.rs
docs/: ASM_INSTRUCTIONS_REFERENCE.md  GRAPHICS_GUIDE.md  MACRO_SYSTEM_GUIDE.md  START_HERE.md
emulator/: Cargo.toml
emulator/src/: emulator.rs  execute.rs  lib.rs  main.rs  memory.rs  registers.rs
run/: Cargo.toml
run/src/: main.rs
src/: args.rs  assembler.rs  emulator.rs  instruction.rs  interactive.rs  main.rs  memory.rs  registers.rs
src/lex/: constant_lexer.rs  data_lexer.rs  define_lexer.rs  instruction_lexer.rs  label_lexer.rs  lexer.rs  macro_lexer.rs  marco_definition_lexer.rs  mod.rs  token.rs
src/preprocessor/: define_macro.rs  macro_expansion.rs  preprocessor.rs
tests/: emulator_tests.rs
(+81 files in other folders)
