[workspace]
members = [
  "assembler",
  "common", "disassembly",
  "emulator"]
resolver = "3"



[package]
name = "mini8"
version = "0.1.0"
edition = "2024"

[dependencies]
assembler = { path = "./assembler" }
disassembly = { path = "./disassembly" }
emulator = { path = "./emulator" }
clap = { version = "4.6.1", features = ["derive"] }


